5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4157/executions/1575_2896.log
== TEST (2019-03-12 22:02:09) 
-- CODE:
Python 
var = input("digite o nome: ")

print(var)
print(python)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Python 
NameError: name 'Python' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:04:03) 
-- CODE:
python3 main.py
var = input("digite o nome: ")

print(var)
print(py)
-- ERROR:
File "XXXX", line 1
    python3 main.py
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:03:23) 
-- CODE:
var = imput("digite o nome: ")
print(var)

-- EXECUTION TIME:
0.191541
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1575/2896/main.py", line 1, in <module>
    var = imput("digite o nome: ")
NameError: name 'imput' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:04:11) 
-- CODE:



var = imput("digite o nome: ")

print(var)

-- EXECUTION TIME:
0.129639
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1575/2896/main.py", line 4, in <module>
    var = imput("digite o nome: ")
NameError: name 'imput' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:04:49) 
-- CODE:



var = imput("bruna")

print(var)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = imput("bruna")
NameError: name 'imput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:04:59) 
-- CODE:



var = input("bruna")

print(var)

-- EXECUTION TIME:
0.17613
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
